--- a/app/src/main/res/layout/fragment_explore_channel_all_channel.xml
+++ b/app/src/main/res/layout/fragment_explore_channel_all_channel.xml
@@ -3,15 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F5F5F5"
     android:orientation="vertical"
-    android:background="@color/white"
     tools:context=".Fragments.ExploreChannelAllChannel">
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/all_channel_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/all_channel_recyclerview"
         tools:listitem="@layout/explore_channel_items">
 
     </androidx.recyclerview.widget.RecyclerView>
