--- a/app/src/main/res/layout/fragment_explore_channel_favourite_channel.xml
+++ b/app/src/main/res/layout/fragment_explore_channel_favourite_channel.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="#F5F5F5"
     tools:context=".Fragments.ExploreChannelFavouriteChannel">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
