--- a/app/src/main/res/layout/fragment_explore_channel_owned_channel.xml
+++ b/app/src/main/res/layout/fragment_explore_channel_owned_channel.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#F5F5F5"
     tools:context=".Fragments.ExploreChannelOwnedChannel">
 
     <androidx.core.widget.NestedScrollView
@@ -22,6 +22,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="20dp"
+                android:focusableInTouchMode="true"
                 android:background="@drawable/google_sign_in_background"
                 android:gravity="center"
                 android:orientation="horizontal">
