--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,9 +58,14 @@
     </style>
     <style name="TabTextAppearance" parent="TextAppearance.AppCompat.Medium">
         <item name="android:fontFamily">@font/airsemi</item>
-        <item name="android:textSize">17dp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textColor">@color/light_grey</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="StepperLayoutStyle">
+        <item name="android:textSize">16dp</item>
+        <item name="android:fontFamily">@font/airreg</item>
     </style>
 
     <style name="WeeksTabTextAppearance" parent="TextAppearance.AppCompat.Small">
