--- a/app/src/main/res/layout/activity_create_new_channel.xml
+++ b/app/src/main/res/layout/activity_create_new_channel.xml
@@ -7,6 +7,13 @@
     android:background="#F5F5F5"
     android:orientation="vertical"
     tools:context=".CreateNewChannel">
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/white"
+        app:cardElevation="2dp">
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
@@ -14,19 +21,19 @@
         app:contentInsetEnd="0dp"
         app:contentInsetRight="0dp"
         app:contentInsetLeft="0dp"
-        android:id="@+id/create_new_course_toolbar"
-        android:background="@color/colorPrimary">
+        android:id="@+id/create_new_channel_toolbar"
+        android:background="@color/white">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="20dp"
             android:fontFamily="@font/airreg"
             android:text="Create New Channel"
             android:layout_marginLeft="20dp"
             android:gravity="center|left"/>
     </androidx.appcompat.widget.Toolbar>
-
+    </androidx.cardview.widget.CardView>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -43,6 +50,6 @@
             app:ms_backButtonColor="@color/colorPrimary"
             app:ms_showBackButtonOnFirstStep="false"
             style="@style/StepperLayoutStyle"
-            android:id="@+id/create_new_course_stepper_layout"/>
+            android:id="@+id/create_new_channel_stepper_layout"/>
     </RelativeLayout>
 </LinearLayout>
