--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -30,11 +30,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="0.5"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
+            android:gravity="bottom"
             android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
@@ -45,7 +46,7 @@
                 android:layout_marginRight="20dp"
                 android:lineSpacingExtra="5dp"
                 android:fontFamily="@font/kumelianbold"
-                android:text="Explore\nYour\nPotentials"/>
+                android:text="Uncover\nYour\nArtistry"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -57,14 +58,14 @@
                 android:layout_marginTop="20dp"
                 android:textColor="@color/white"
                 android:fontFamily="@font/airreg"
-                android:text="Join Estello to watch, play, learn, make and discover."/>
+                android:text="Join Estello to learn, meet, collaborate and uncover."/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
             android:gravity="center"
-            android:layout_weight="2">
+            android:layout_weight="2.5">
 
 
 
@@ -105,6 +106,7 @@
             android:textColor="@color/blue"
             android:textSize="17dp" />
     </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/signin_with_facebook_layout"
                 android:layout_width="match_parent"
@@ -138,11 +140,62 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/airreg"
-                    android:text="Sign in with facebook"
+                    android:text="Connect with facebook"
                     android:layout_weight="3"
                     android:textColor="@color/white"
                     android:textSize="17dp" />
             </LinearLayout>
+            <LinearLayout
+                android:id="@+id/signin_with_email_layout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/google_sign_in_background"
+                android:gravity="center"
+                android:weightSum="4"
+                android:backgroundTint="@color/colorPrimary"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:gravity="center"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="28dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:tint="@color/white"
+                        android:src="@drawable/mail_2x" />
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/airreg"
+                    android:text="Connect with Email"
+                    android:layout_weight="3"
+                    android:textColor="@color/white"
+                    android:textSize="17dp" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/airreg"
+                android:lineSpacingExtra="5dp"
+                android:gravity="center"
+                android:textSize="13dp"
+                android:text="By Creating your Estello account you agree to our Terms of Use and Privacy Policy"/>
 
         </LinearLayout>
         </LinearLayout>
