--- a/app/src/main/res/layout/fragment_direct_messages.xml
+++ b/app/src/main/res/layout/fragment_direct_messages.xml
@@ -10,36 +10,36 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="50dp">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
 
-            <com.google.android.material.card.MaterialCardView
+            <LinearLayout
+                android:id="@+id/signin_with_google_layout"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="20dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardElevation="3dp"
-                app:strokeColor="#CFCFCF"
-                app:strokeWidth="1dp">
+                android:background="@drawable/google_sign_in_background"
+                android:gravity="center"
+                android:weightSum="4"
+                android:orientation="horizontal">
+
+
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/airreg"
-                    android:gravity="center|left"
                     android:text="Jump to..."
+                    android:layout_weight="3"
                     android:textColor="@color/light_text_color"
                     android:textSize="17dp" />
-            </com.google.android.material.card.MaterialCardView>
+            </LinearLayout>
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -61,5 +61,5 @@
         app:maxImageSize="20dp"
         android:layout_gravity="bottom|right"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="65dp"/>
+        android:layout_marginBottom="15dp"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
