--- a/app/src/main/res/drawable/quiz_selected_options_background.xml
+++ b/app/src/main/res/drawable/quiz_selected_options_background.xml
@@ -3,13 +3,9 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#50000000" />
+        android:color="@color/colorPrimary" />
 
-    <stroke
-        android:width="1dp"
-        android:color="@color/green">
 
-    </stroke>
     <corners
         android:radius="7dp">
     </corners>
