--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -45,6 +45,7 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:padding="10dp"
+                        android:id="@+id/main_search"
                         android:layout_gravity="center|bottom"
                         android:tint="@color/colorPrimary"
                         android:src="@drawable/newsearchicon"/>
