--- a/app/src/main/res/layout/content_type_live_details.xml
+++ b/app/src/main/res/layout/content_type_live_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginBottom="60dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".CourseDetails"
+    tools:context=".CourseDetailsTypeLive"
     android:background="@color/white">
 
 
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:fontFamily="@font/airbold"
-                android:text="Top Reviews"
+                android:text="Top Live Reviews"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"
                 android:textSize="@dimen/regular_text_size" />
@@ -125,30 +125,30 @@
                         android:gravity="center|left">
 
 
-                    <androidx.appcompat.widget.AppCompatRatingBar
-                        style="@style/Widget.AppCompat.RatingBar.Small"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:numStars="5"
-                        android:padding="0dp"
-                        android:progressTint="@color/yellow"
-                        android:rating="5"
-                        android:scaleX="0.8"
-                        android:scaleY="0.8" />
+                        <androidx.appcompat.widget.AppCompatRatingBar
+                            style="@style/Widget.AppCompat.RatingBar.Small"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:numStars="5"
+                            android:padding="0dp"
+                            android:progressTint="@color/yellow"
+                            android:rating="5"
+                            android:scaleX="0.8"
+                            android:scaleY="0.8" />
 
                         <ImageView
                             android:layout_width="2dp"
                             android:layout_height="2dp"
                             android:src="@drawable/grey_circle"
                             android:tint="#7A7A7A"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="By HA"
-                        android:textColor="#7A7A7A"
-                        android:layout_marginLeft="5dp"
-                        android:fontFamily="@font/airreg"
-                        android:textSize="@dimen/small_text_size"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="By HA"
+                            android:textColor="#7A7A7A"
+                            android:layout_marginLeft="5dp"
+                            android:fontFamily="@font/airreg"
+                            android:textSize="@dimen/small_text_size"/>
 
 
                         <ImageView
