--- a/app/src/main/res/layout/learning_search_skill_teacher_layout.xml
+++ b/app/src/main/res/layout/learning_search_skill_teacher_layout.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_course"
+    android:visibility="gone"
+    android:id="@+id/learning_search_skill_teacher_rootview"
     android:layout_height="match_parent">
 
-    <com.estello.android.ViewModel.NoSwipeableViewPager
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/course_activity_pager">
+        android:id="@+id/learning_search_skill_teacher_recyclerview"
+        tools:listitem="@layout/learning_search_skill_item">
 
-    </com.estello.android.ViewModel.NoSwipeableViewPager>
+    </androidx.recyclerview.widget.RecyclerView>
+
 </LinearLayout>
