--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -46,7 +46,7 @@
                 android:layout_marginRight="20dp"
                 android:lineSpacingExtra="5dp"
                 android:fontFamily="@font/kumelianbold"
-                android:text="Uncover\nYour\nArtistry"/>
+                android:text="Discover\nSomething\nDifferent"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                 android:layout_marginTop="20dp"
                 android:textColor="@color/white"
                 android:fontFamily="@font/airreg"
-                android:text="Join Estello to learn, meet, collaborate and uncover."/>
+                android:text="Join Estello to learn, meet, collaborate and be Alive."/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -116,6 +116,7 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/google_sign_in_background"
                 android:gravity="center"
+                android:visibility="gone"
                 android:weightSum="4"
                 android:backgroundTint="@color/blue"
                 android:orientation="horizontal">
